// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WindowSwitcher renders window icons alongside titles 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-black/70 backdrop-blur-sm"
  >
    <div
      class="w-11/12 max-w-lg rounded-lg border border-black/20 bg-white/95 p-4 text-kali-text shadow-2xl dark:border-white/10 dark:bg-ub-grey dark:text-white md:w-1/3"
    >
      <label
        class="sr-only"
        for="window-switcher-search"
      >
        Search windows
      </label>
      <input
        aria-label="Search windows"
        class="mb-4 w-full rounded-md border border-black/10 bg-white/40 px-3 py-2 text-sm text-kali-text placeholder:text-kali-muted focus:border-kali-focus focus:outline-none focus:ring-2 focus:ring-kali-focus dark:border-white/10 dark:bg-black/40 dark:text-white dark:placeholder:text-gray-300"
        id="window-switcher-search"
        placeholder="Search windows"
        value=""
      />
      <ul
        aria-label="Open windows"
        class="space-y-2"
        role="listbox"
      >
        <li
          aria-selected="true"
          class="group flex items-center gap-3 rounded-md px-3 py-2 text-sm transition-colors bg-ub-orange text-black shadow-lg dark:text-black"
          id="window-switcher-item-terminal"
          role="option"
        >
          <img
            alt="Terminal icon"
            class="h-9 w-9 flex-shrink-0 rounded-md border border-black/10 bg-white/70 object-contain p-1 dark:border-white/10 dark:bg-black/40"
            src="/themes/Yaru/apps/bash.png"
          />
          <span
            class="flex-1 truncate font-medium"
            title="Terminal"
          >
            Terminal
          </span>
        </li>
        <li
          aria-selected="false"
          class="group flex items-center gap-3 rounded-md px-3 py-2 text-sm transition-colors bg-white/30 text-kali-text hover:bg-white/50 dark:bg-black/40 dark:text-white dark:hover:bg-black/60"
          id="window-switcher-item-firefox"
          role="option"
        >
          <img
            alt="Firefox icon"
            class="h-9 w-9 flex-shrink-0 rounded-md border border-black/10 bg-white/70 object-contain p-1 dark:border-white/10 dark:bg-black/40"
            src="/themes/Yaru/apps/firefox.svg"
          />
          <span
            class="flex-1 truncate font-medium"
            title="Firefox"
          >
            Firefox
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WindowSwitcher retains icon markup when filtering results 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-black/70 backdrop-blur-sm"
  >
    <div
      class="w-11/12 max-w-lg rounded-lg border border-black/20 bg-white/95 p-4 text-kali-text shadow-2xl dark:border-white/10 dark:bg-ub-grey dark:text-white md:w-1/3"
    >
      <label
        class="sr-only"
        for="window-switcher-search"
      >
        Search windows
      </label>
      <input
        aria-label="Search windows"
        class="mb-4 w-full rounded-md border border-black/10 bg-white/40 px-3 py-2 text-sm text-kali-text placeholder:text-kali-muted focus:border-kali-focus focus:outline-none focus:ring-2 focus:ring-kali-focus dark:border-white/10 dark:bg-black/40 dark:text-white dark:placeholder:text-gray-300"
        id="window-switcher-search"
        placeholder="Search windows"
        value="term"
      />
      <ul
        aria-label="Open windows"
        class="space-y-2"
        role="listbox"
      >
        <li
          aria-selected="true"
          class="group flex items-center gap-3 rounded-md px-3 py-2 text-sm transition-colors bg-ub-orange text-black shadow-lg dark:text-black"
          id="window-switcher-item-terminal"
          role="option"
        >
          <img
            alt="Terminal icon"
            class="h-9 w-9 flex-shrink-0 rounded-md border border-black/10 bg-white/70 object-contain p-1 dark:border-white/10 dark:bg-black/40"
            src="/themes/Yaru/apps/bash.png"
          />
          <span
            class="flex-1 truncate font-medium"
            title="Terminal"
          >
            Terminal
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
